--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       Project Title: Income Tax Calculator 
       Filename: index.html
 
-      Author: 
-      Date:   
+      Author: Noah Abramowitz
+      Date: March 2nd, 2018 
    -->
    <meta charset="utf-8" />
    <meta id="viewport" content="width=device-width, initial-scale=1.0">
